--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-minimal
 title: 7 Seas Of Something 
 description: SEPR Project
 avatar: https://jabrah29.people.uic.edu/processing/data/clock.png
+logo: https://jabrah29.people.uic.edu/processing/data/clock.png
 
 navbar-links:
   Testing testing: "123456"
