--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: 7 Seas Of Something 
-description: SEPR Project
+description: SEPR Project test
 avatar: https://jabrah29.people.uic.edu/processing/data/clock.png
 logo: https://jabrah29.people.uic.edu/processing/data/clock.png
 
