--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: 7 Seas Of Something 
+title: Seven Seas Of Something 
 description: SEPR Project test
 #avatar: https://jabrah29.people.uic.edu/processing/data/clock.png
 #logo: https://jabrah29.people.uic.edu/processing/data/clock.png
