--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,4 @@
 theme: jekyll-theme-minimal
-title: Seven Seas Of Something 
-description: SEPR Project test
-#avatar: https://jabrah29.people.uic.edu/processing/data/clock.png
-#logo: https://jabrah29.people.uic.edu/processing/data/clock.png
-
-#navbar-links:
-#  Testing testing: "123456"
-  
-#navbar-col: "#F5F5F5"
-#navbar-text-col: "#404040"
+title: Seven Seas Of Something
+description: SEPR is hell
+baseurl: /UnnamedGame
