--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Seven Seas Of Something
 description: SEPR is hell
 baseurl: /UnnamedGame
 logo: https://upload.wikimedia.org/wikipedia/commons/4/42/Temp_plate.svg
-show_downloads: true #This lets you download the entire current repo, maybe it's not exactly what we're looking for right now.
+#show_downloads: true #This lets you download the entire current repo, maybe it's not exactly what we're looking for right now.
