--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Seven Seas Of Something
-description: SEPR Project W.I.P!
+description: SEPR Project W.I.P
 #baseurl: /UnnamedGame/
 logo: https://raw.githubusercontent.com/7SeasOfSomething/UnnamedGame/master/docs/images/Logo.png
 #show_downloads: true #This lets you download the entire current repo, maybe it's not exactly what we're looking for right now.
