JSON tests for Cards
Did some tests on using JSON files. Currently, it's possible to parse information from a JSON file into specific variable, etc.
However, there are two problems.
1.) The filepath is only absolute, currently, and I can't figure out a way to make this so that it uses a file in the assets folder, for instance.
2.) I'm not too sure where to go with this - Looks like the whole database will be imported somewhere, and then specific sections will be called as shown in the examples I gave in the actual program. However, how this will be handled is another thing. Maybe pass an ID to the card class initialisation and have it all parse like that? Need to discuss this still.

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ buildscript {
     }
     dependencies {
         
-
     }
 }
 
@@ -69,7 +68,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
-        
+        implementation 'org.json:json:20180813'
     }
 }
 
